--- a/project_1.html
+++ b/project_1.html
@@ -153,11 +153,16 @@
 
                     <!-- video player -->
                     <div class="col-12">
-                        <h3>Demo Video</h3>
-                        <video style="max-width: 100%; height: auto;" controls>
+                        <!-- <h3>Demo Video</h3> -->
+                        <a href="https://drive.google.com/file/d/1Nq0mDHaw1XaRrZO106jxgVltQykOZVmG/view" target="_blank"> <h3> Click here for Demo Video </n h3> </a>
+                        <!-- <h2>https://drive.google.com/file/d/1Nq0mDHaw1XaRrZO106jxgVltQykOZVmG/view</h2> -->
+                        <!-- <video style="max-width: 100%; height: auto;" controls>
                             <source src="images/project_1_ma4825/MA4825_Xbot_Demo_Video.mp4" type="video/mp4">
                             Your browser does not support the video tag.
-                        </video>
+                        </video> -->
+                        <!-- <video style="max-width: 100%; height: auto;" controls>
+                            <source src="https://drive.google.com/uc?export=download&id=1Nq0mDHaw1XaRrZO106jxgVltQykOZVmG" type="video/mp4">
+                        </video>                         -->
                         <!-- <iframe width="100%" height="700" src="https://www.youtube.com/embed/lkDrG7G77Fg?si=csV_0vji3uiO7md3" frameborder="0" allowfullscreen></iframe> -->
                         <!-- <a href="#portfolio" class="button large scrolly">Back to top</a> -->
                         </div>
